# SF-apt-hunter

./: .gitignore  README.md  cli.py  crawl.py  criteria.py  fetch.py  models.py  notify.py  pyproject.toml  requirements.txt  sites.txt
adapters/: __init__.py  base.py  rentsfnow.py
config/: schema.yml
config/sites/: mosser.yml  rentsfnow.yml
core/: extract.py  normalize.py  play_helper.py  util.py  validate.py
fixtures/mosser/: sample.html  sample.json
fixtures/rentsfnow/: sample.html  sample.json
httpx/: __init__.py
jsonpath_ng/: __init__.py
jsonpath_ng/ext/: __init__.py
parser/: __init__.py  _fallback_bs4.py  cli.py  extract.py  heuristics.py  models.py  sites.py  sites.yaml  sites_test.yaml  workflow.py
parser/scrapers/: __init__.py  amsires_scraper.py  anchorealty_scraper.py  chandlerproperties_scraper.py  gaetanirealestate_scraper.py  jacksongroup_scraper.py  mosser_scraper.py  relisto_scraper.py  rentbt_scraper.py  rentbt_sf_scraper.py  rentsfnow_scraper.py  structure_scraper.py
parser/tests/: test_amsires_scraper.py  test_anchorealty_scraper.py  test_chandlerproperties_scraper.py  test_extract_basic.py  test_gaetanirealestate_scraper.py  test_jacksongroup_scraper.py  test_mosser_scraper.py  test_rentbt_scraper.py  test_rentbt_sf_scraper.py  test_rentsfnow_scraper.py  test_sites_yaml.py  test_structure_scraper.py  test_text_utils.py  test_workflow.py
pydantic/: __init__.py
selectolax/: parser.py
tenacity/: __init__.py
tests/: test_canary.py
yaml/: __init__.py
